# renderlab

./: README.md  pyproject.toml  zoo-project.json
docs/raw/: 00__original-concept-for-renderlab.txt  01__pyramid-spec-for-renderlab.md  02__conversations.txt  03__example-code-from-aistudio.py  04__cli-spec.json  05__recipe-json-spec.json  06__job-json-spec.json  07__run-json-spec.json
src/renderlab/: cli.py
